fix: add horizontal scrolling to view hourly temperature

--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    overflow: auto;
 }
 
 .card {
@@ -93,6 +94,15 @@ body {
     flex: 1;
 }
 
+/* hourly temp ui start*/
+
+#hourly-temp-container ul{
+    list-style: none;
+    display: flex;
+    gap: 1rem;
+    overflow: auto;
+}
+/* hourly temp ui end */
 /* footer start*/
 .footer {
     text-align: center;
